--- a/nodejs/src/views/detail.hbs
+++ b/nodejs/src/views/detail.hbs
@@ -12,16 +12,15 @@
 </head>
 
 <body>
-      <!-- Navbar Bootstrap -->
+    <!-- Navbar Bootstrap -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary " style="background-color: rgb(244, 243, 243) !important">
         <div class="container-fluid mx-5">
             <a class="navbar-brand" href="index.html">
                 <img src="/assets/img/logodumbways.png" class="img-fluid max-width:100% me-4" style="height: 32px;"
                     alt="logo-dumbways">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon">
                 </span>
             </button>
@@ -37,9 +36,9 @@
                         <a class="nav-link" href="/testimonial">Testimonial</a>
                     </li>
                 </ul>
-                    <a href="/contact" id="buttonContactCont" >
-                        <button type="button" class="btn btn-dark" id="buttonContact">Contact Me</button>
-                    </a>
+                <a href="/contact" id="buttonContactCont">
+                    <button type="button" class="btn btn-dark" id="buttonContact">Contact Me</button>
+                </a>
             </div>
         </div>
     </nav>
@@ -50,7 +49,7 @@
     <div class="container-detail">
         <div class="title">
             <h1>{{id}}</h1>
-            <h1>Dumbways Web APP</h1>
+            <h1>Dumbways - {{data.name}}</h1>
         </div>
         <div class="container-content">
             <div class="image">
@@ -60,26 +59,34 @@
                 <div class="duration">
                     <p class="duration-title">Duration</p>
                     <i class="fa-solid fa-calendar-days">
-                        <p class="duration-date" id="durationDate">12 Jan 2021 - 11 Feb 2021</p>
+                        <p class="duration-date" id="durationDate">{{data.startdate}} - {{data.enddate}}</p>
                     </i>
                     <i class="fa-regular fa-clock">
-                        <p class="duration-time" id="durationTime">1 month</p>
+                        <p class="duration-time" id="durationTime">{{data.totalMonth}}</p>
                     </i>
                 </div>
                 <div class="technologies">
                     <p class="technologies-title">Technologies</p>
                     <div class="techno-1">
+                        {{#if data.program.first}}
                         <img src="/assets/icon/nodejs.png" alt="logo-nodejs" class="logo-nodejs" id="logo-nodejs">
                         <p class="p-nodejs">Node Js</p>
+                        {{/if}}
+                        {{#if data.program.second}}
                         <img src="/assets/icon/reactjs.png" alt="logo-reactjs" class="logo-reactjs" id="logo-reactjs">
                         <p class="p-reactjs">React Js</p>
+                        {{/if}}
                     </div>
                     <div class="techno-2">
+                        {{#if data.program.third}}
                         <img src="/assets/icon/nextjs.png" alt="logo-nextjs" class="logo-nextjs" id="logo-nextjs">
                         <p class="p-nextjs">Next JS</p>
+                        {{/if}}
+                        {{#if data.program.fourth}}
                         <img src="/assets/icon/typescript.png" alt="logo-typescript" class="logo-typescript"
                             id="logo-typescript">
                         <p class="p-typescript">TypeScript</p>
+                        {{/if}}
                     </div>
                 </div>
             </div>
@@ -128,38 +135,8 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/myproject.js"></script>
-    <script>
 
-        document.addEventListener('DOMContentLoaded', function () {
-            const selectData = JSON.parse(localStorage.getItem('selectedProject'));
-            const durationDates = document.getElementById('durationDate');
-            const durationTimes = document.getElementById('durationTime');
 
-            if (selectData) {
-                const formattedStartDate = formatDate(new Date(selectData.startDate));
-                const formattedEndDate = formatDate(new Date(selectData.endDate));
-
-                durationDates.textContent = `${formattedStartDate} - ${formattedEndDate}`;
-                durationTimes.textContent = selectData.totalMonth;
-            } else {
-                console.log("No data in local storage");
-            }
-        });
-
-        function formatDate(dates) {
-            
-            const date = dates.getDate()
-            const month = dates.getMonth()
-            const year = dates.getFullYear()
-            
-            const months = [
-                "Jan", "Feb", "Mar", "Apr", "May", "Jun",
-                "Jul", "Aug", "Sep", "Okt", "Nov", "Des"
-            ];
-          
-            return `${date} ${months[month]} ${year}`;
-        }
-    </script>
 </body>
 
 </html>
