--- a/nodejs/src/views/updatemyproject.hbs
+++ b/nodejs/src/views/updatemyproject.hbs
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
+    <title>Update My Project</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/myproject.css">
+    <link rel="stylesheet" href="/assets/css/myproject.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary " style="background-color: rgb(244, 243, 243) !important">
         <div class="container-fluid mx-5">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/img/logodumbways.png" class="img-fluid max-width:100% me-4" style="height: 32px;"
+                <img src="/assets/img/logodumbways.png" class="img-fluid max-width:100% me-4" style="height: 32px;"
                     alt="logo-dumbways">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
@@ -45,25 +45,25 @@
     </nav>
 
     <!-- FORM BOOTSTRAP -->
-    <h2 class="mt-4 d-flex justify-content-center">ADD MY PROJECT</h2>
+    <h2 class="mt-4 d-flex justify-content-center">Update MY PROJECT</h2>
     <div class="container mt-5">
-        <form class="row g-3" action="/myproject" method="POST">
+        <form class="row g-3" action="/updatemyproject/{{id}}" method="POST">
             <div class="col-12">
                 <label for="projectName" class="form-label fw-bold">Project Name</label>
-                <input type="text" class="form-control" id="projectName" name="name">
+                <input type="text" class="form-control" id="projectName" name="name" value="{{editData.name}}">
             </div>
             <div class="col-md-6">
                 <label for="startDate" class="form-label fw-bold">Start Date</label>
-                <input type="date" class="form-control" id="startDate" name="startdate">
+                <input type="date" class="form-control" id="startDate" name="startdate" value="{{editData.startdate}}">
             </div>
             <div class="col-md-6">
                 <label for="endDate" class="form-label fw-bold">End Date</label>
-                <input type="date" class="form-control" id="endDate" name="enddate">
+                <input type="date" class="form-control" id="endDate" name="enddate" value="{{editData.enddate}}">
             </div>
             <div>
                 <label class="mb-2 fw-bold" for="description">Description</label>
                 <div class="form-floating">
-                    <textarea class="form-control" id="description" name="description"></textarea>
+                    <textarea class="form-control" id="description" name="description" >{{editData.description}}</textarea>
                 </div>
             </div>
             <div>
@@ -71,13 +71,13 @@
                 <div class="col-12 d-flex">
                     <div class="col-6">
                         <div class="form-check mb-2">
-                            <input class="form-check-input" type="checkbox" id="nodejs" name="nodejs">
+                            <input class="form-check-input" type="checkbox" id="nodejs" name="nodejs" {{#if editData.program.first}}checked{{/if}}>
                             <label class="form-check-label" for="nodejs">
                                 Node JS
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="reactjs" name="reactjs">
+                            <input class="form-check-input" type="checkbox" id="reactjs" name="reactjs" {{#if editData.program.second}}checked{{/if}}>
                             <label class="form-check-label" for="reactjs">
                                 React JS
                             </label>
@@ -86,13 +86,13 @@
 
                     <div>
                         <div class="form-check mb-2">
-                            <input class="form-check-input" type="checkbox" id="nextjs" name="nextjs">
+                            <input class="form-check-input" type="checkbox" id="nextjs" name="nextjs" {{#if editData.program.third}}checked{{/if}}>
                             <label class="form-check-label" for="nextjs">
                                 Next JS
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="typescript" name="typescript">
+                            <input class="form-check-input" type="checkbox" id="typescript" name="typescript" {{#if editData.program.fourth}}checked{{/if}}>
                             <label class="form-check-label" for="typescript">
                                 TypeScript
                             </label>
@@ -123,52 +123,7 @@
 
 
 
-    <!-- Card -->
-    <div class="title">
-        <h1>MY PROJECT</h1>
-    </div>
-    <div class="container-master" id="container">
-        {{!-- Content moved to javascript --}}
-        {{#each data}}
-        <div class="container-card">
-            <div class="container-card-2">
-                <div class="container-content">
-                    <img src="assets/img/image1.jpg" alt="smartphone" class="image-1">
-                    <h4>{{name}}</h4>
-                    <span id="totalMonth">{{totalMonth}}</span>
-                    <a href="/detail/{{@index}}" class="text-reset"><p>{{description}}</p></a>
-                </div>
-                <div class="container-logo">
-                    {{#if program.first}}
-                    <img src='assets/icon/nodejs.png' alt="logo-nodejs" class="logo-nodejs" id="logo-nodejs">
-                    {{/if}}
-                    {{#if program.second}}
-                    <img src='assets/icon/reactjs.png' alt="logo-reactjs" class="logo-reactjs" id="logo-reactjs">
-                    {{/if}}
-                    {{#if program.third}}
-                    <img src='assets/icon/nextjs.png' alt="logo-nextjs" class="logo-nextjs" id="logo-nextjs">
-                    {{/if}}
-                    {{#if program.fourth}}
-                    <img src='assets/icon/typescript.png' alt="logo-typescript" class="logo-typescript"
-                        id="logo-typescript">
-                    {{/if}}
 
-
-
-                </div>
-                <div class="container-button">
-                    <button class="edit-button">
-                        <a href="/updatemyproject/{{@index}}" class="editx">edit</a>
-                    </button>
-                    <button class="delete-button">
-                        <a href="/delete/{{@index}}" onclick="return confirm('Delete this post?')" class="text-decoration-none text-reset">delete</a></button>
-                </div>
-            </div>
-        </div>
-        {{/each}}
-
-        {{!-- --}}
-    </div>
 
     <script src="assets/js/myproject.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
