Refactoring some function and add css hover

--- a/nodejs/src/views/detail.hbs
+++ b/nodejs/src/views/detail.hbs
@@ -48,7 +48,6 @@
 
     <div class="container-detail">
         <div class="title">
-            <h1>{{id}}</h1>
             <h1>Dumbways - {{data.name}}</h1>
         </div>
         <div class="container-content">
@@ -59,7 +58,7 @@
                 <div class="duration">
                     <p class="duration-title">Duration</p>
                     <i class="fa-solid fa-calendar-days">
-                        <p class="duration-date" id="durationDate">{{data.startdate}} - {{data.enddate}}</p>
+                        <p class="duration-date" id="durationDate">{{data.startDateFormat}} - {{data.endDateFormat}}</p>
                     </i>
                     <i class="fa-regular fa-clock">
                         <p class="duration-time" id="durationTime">{{data.totalMonth}}</p>
