--- a/nodejs/src/views/updatemyproject.hbs
+++ b/nodejs/src/views/updatemyproject.hbs
@@ -50,20 +50,20 @@
         <form class="row g-3" action="/updatemyproject/{{id}}" method="POST">
             <div class="col-12">
                 <label for="projectName" class="form-label fw-bold">Project Name</label>
-                <input type="text" class="form-control" id="projectName" name="name" value="{{editData.name}}">
+                <input type="text" class="form-control" id="projectName" name="name" value="{{data.name}}">
             </div>
             <div class="col-md-6">
                 <label for="startDate" class="form-label fw-bold">Start Date</label>
-                <input type="date" class="form-control" id="startDate" name="startdate" value="{{editData.startdate}}">
+                <input type="date" class="form-control" id="startDate" name="startdate" value="{{data.startdate}}">
             </div>
             <div class="col-md-6">
                 <label for="endDate" class="form-label fw-bold">End Date</label>
-                <input type="date" class="form-control" id="endDate" name="enddate" value="{{editData.enddate}}">
+                <input type="date" class="form-control" id="endDate" name="enddate" value="{{data.enddate}}">
             </div>
             <div>
                 <label class="mb-2 fw-bold" for="description">Description</label>
                 <div class="form-floating">
-                    <textarea class="form-control" id="description" name="description" >{{editData.description}}</textarea>
+                    <textarea class="form-control" id="description" name="description" >{{data.description}}</textarea>
                 </div>
             </div>
             <div>
@@ -71,13 +71,13 @@
                 <div class="col-12 d-flex">
                     <div class="col-6">
                         <div class="form-check mb-2">
-                            <input class="form-check-input" type="checkbox" id="nodejs" name="nodejs" {{#if editData.program.first}}checked{{/if}}>
+                            <input class="form-check-input" type="checkbox" id="nodejs" name="nodejs" {{#if data.program.first}}checked{{/if}}>
                             <label class="form-check-label" for="nodejs">
                                 Node JS
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="reactjs" name="reactjs" {{#if editData.program.second}}checked{{/if}}>
+                            <input class="form-check-input" type="checkbox" id="reactjs" name="reactjs" {{#if data.program.second}}checked{{/if}}>
                             <label class="form-check-label" for="reactjs">
                                 React JS
                             </label>
@@ -86,13 +86,13 @@
 
                     <div>
                         <div class="form-check mb-2">
-                            <input class="form-check-input" type="checkbox" id="nextjs" name="nextjs" {{#if editData.program.third}}checked{{/if}}>
+                            <input class="form-check-input" type="checkbox" id="nextjs" name="nextjs" {{#if data.program.third}}checked{{/if}}>
                             <label class="form-check-label" for="nextjs">
                                 Next JS
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="typescript" name="typescript" {{#if editData.program.fourth}}checked{{/if}}>
+                            <input class="form-check-input" type="checkbox" id="typescript" name="typescript" {{#if data.program.fourth}}checked{{/if}}>
                             <label class="form-check-label" for="typescript">
                                 TypeScript
                             </label>
