--- a/nodejs/src/assets/css/myproject.css
+++ b/nodejs/src/assets/css/myproject.css
@@ -48,14 +48,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .container-master {
     background-color: rgb(238, 235, 235);
     word-break: break-all;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    justify-content: center;
+    padding-bottom: 50px;
 }
 
 .container-card {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .container-card-2 {
@@ -65,7 +66,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     box-shadow: 0 0 10px rgb(153, 151, 151);
     overflow: hidden;
     padding: 10px;
+    transition: all 0.3s;
 
+
+}
+.container-card-2:hover {
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 .container-content {
