--- a/nodejs/src/views/index.hbs
+++ b/nodejs/src/views/index.hbs
@@ -37,6 +37,27 @@
                         <a class="nav-link" href="/testimonial">Testimonial</a>
                     </li>
                 </ul>
+
+                {{#if isLogin}}
+                  <ul class="navbar-nav me-4 mb-2 mb-lg-0 gap-3" id="navbarNavLogin">
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold active text-danger" href="#">Hello, {{user}}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                </ul>
+                {{else}}
+                 <ul class="navbar-nav me-4 mb-2 mb-lg-0 gap-3" id="navbarNavLogin">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                </ul>
+                {{/if}}
+
                     <a href="/contact"   id="buttonContactCont" >
                         <button type="button" class="btn btn-dark" id="buttonContact">Contact Me</button>
                     </a>
@@ -45,6 +66,11 @@
     </nav>
   
 
+      {{#if messages.success}}
+    <div class="alert alert-success" role="alert">
+        <p class="d-flex justify-content-center fw-bold  mx-auto my-auto">{{messages.success}}</p>
+    </div>
+    {{/if}}
 
     <!-- Content -->
     <div class="content-head">
