--- a/nodejs/src/assets/css/detail.css
+++ b/nodejs/src/assets/css/detail.css
@@ -131,6 +131,18 @@ body {
         align-items: center;
     }
 
+    #navbarNavLogin {
+        gap: 0 !important;
+        margin-top: 15px;
+        margin: 0 auto !important;
+        justify-content: center;
+        align-items: center;
+    }
+    #navbarNavLogin li a{
+        margin-top: -13px;
+        margin-bottom: 11px;
+    }
+
     #buttonContactCont {
         text-decoration: none;
     }
@@ -142,7 +154,7 @@ body {
         color: rgb(85, 85, 85);
         text-decoration: none !important;
         border: 0;
-        margin-top: -8px;
+        margin-top: -10px;
     }
 
     .nav-home ul {
@@ -205,6 +217,19 @@ body {
         align-items: center;
     }
 
+
+    #navbarNavLogin {
+        gap: 0 !important;
+        margin-top: 15px;
+        margin: 0 auto !important;
+        justify-content: center;
+        align-items: center;
+    }
+    #navbarNavLogin li a{
+        margin-top: -13px;
+        margin-bottom: 11px;
+    }
+
     #buttonContactCont {
         text-decoration: none;
     }
@@ -216,7 +241,7 @@ body {
         color: rgb(85, 85, 85);
         text-decoration: none !important;
         border: 0;
-        margin-top: -8px;
+        margin-top: -10px;
     }
 
     /* Detail CSS */
