--- a/nodejs/src/assets/css/myproject.css
+++ b/nodejs/src/assets/css/myproject.css
@@ -200,6 +200,18 @@ input[type="date"]::-webkit-calendar-picker-indicator {
         align-items: center;
     }
 
+    #navbarNavLogin {
+        gap: 0 !important;
+        margin-top: 15px;
+        margin: 0 auto !important;
+        justify-content: center;
+        align-items: center;
+    }
+    #navbarNavLogin li a{
+        margin-top: -13px;
+        margin-bottom: 11px;
+    }
+
     #buttonContactCont {
         text-decoration: none;
     }
@@ -211,7 +223,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
         color: rgb(85, 85, 85);
         text-decoration: none !important;
         border: 0;
-        margin-top: -8px;
+        margin-top: -10px;
     }
 
     .container {
@@ -240,6 +252,18 @@ input[type="date"]::-webkit-calendar-picker-indicator {
         align-items: center;
     }
 
+    #navbarNavLogin {
+        gap: 0 !important;
+        margin-top: 15px;
+        margin: 0 auto !important;
+        justify-content: center;
+        align-items: center;
+    }
+    #navbarNavLogin li a{
+        margin-top: -13px;
+        margin-bottom: 11px;
+    }
+
     #buttonContactCont {
         text-decoration: none;
     }
@@ -251,7 +275,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
         color: rgb(85, 85, 85);
         text-decoration: none !important;
         border: 0;
-        margin-top: -8px;
+        margin-top: -10px;
     }
 
     .container {
