--- a/nodejs/src/assets/css/style.css
+++ b/nodejs/src/assets/css/style.css
@@ -251,6 +251,17 @@ nav ul {
         justify-content: center;
         align-items: center;
     }
+    #navbarNavLogin {
+        gap: 0 !important;
+        margin-top: 15px;
+        margin: 0 auto !important;
+        justify-content: center;
+        align-items: center;
+    }
+    #navbarNavLogin li a{
+        margin-top: -13px;
+        margin-bottom: 11px;
+    }
 
     #buttonContactCont{
     text-decoration: none;
@@ -258,13 +269,13 @@ nav ul {
     }
 
     #buttonContact {
+        margin-top: -10px;
         display: flex;
         margin: 0 auto;
         background-color: rgb(244, 243, 243);
         color: rgb(85,85,85);
-
+        margin-top: -10px;
         border: 0;
-        margin-top: -8px;
     }
 
     #contactContainer {
@@ -431,6 +442,18 @@ nav ul {
         align-items: center;
     }
 
+    #navbarNavLogin {
+        gap: 0 !important;
+        margin-top: 15px;
+        margin: 0 auto !important;
+        justify-content: center;
+        align-items: center;
+    }
+    #navbarNavLogin li a{
+        margin-top: -13px;
+        margin-bottom: 11px;
+    }
+
     #buttonContactCont{
     text-decoration: none;
     }
@@ -442,7 +465,7 @@ nav ul {
         color: rgb(85,85,85);
         text-decoration: none !important;
         border: 0;
-        margin-top: -8px;
+        margin-top: -10px;
         font-weight: bold;
     }
 
