--- a/nodejs/src/assets/css/testimonial.css
+++ b/nodejs/src/assets/css/testimonial.css
@@ -115,6 +115,18 @@ body {
         align-items: center;
     }
 
+    #navbarNavLogin {
+        gap: 0 !important;
+        margin-top: 15px;
+        margin: 0 auto !important;
+        justify-content: center;
+        align-items: center;
+    }
+    #navbarNavLogin li a{
+        margin-top: -13px;
+        margin-bottom: 11px;
+    }
+
     #buttonContactCont{
     text-decoration: none;
     }
@@ -126,7 +138,7 @@ body {
         color: rgb(85,85,85);
         text-decoration: none !important;
         border: 0;
-        margin-top: -8px;
+        margin-top: -10px;
     }
 
 
@@ -193,6 +205,18 @@ body {
         align-items: center;
     }
 
+    #navbarNavLogin {
+        gap: 0 !important;
+        margin-top: 15px;
+        margin: 0 auto !important;
+        justify-content: center;
+        align-items: center;
+    }
+    #navbarNavLogin li a{
+        margin-top: -13px;
+        margin-bottom: 11px;
+    }
+
     #buttonContactCont{
     text-decoration: none;
     }
@@ -204,7 +228,7 @@ body {
         color: rgb(85,85,85);
         text-decoration: none !important;
         border: 0;
-        margin-top: -8px;
+        margin-top: -10px;
     }
         .testimonial-content {
             gap: 40px;
