--- a/nodejs/src/views/contact.hbs
+++ b/nodejs/src/views/contact.hbs
@@ -12,74 +12,95 @@
 </head>
 
 <body>
-<!-- Navbar Bootstrap -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary " style="background-color: rgb(244, 243, 243) !important">
-    <div class="container-fluid mx-5">
-        <a class="navbar-brand" href="index.html">
-            <img src="assets/img/logodumbways.png" class="img-fluid max-width:100% me-4" style="height: 32px;"
-                alt="logo-dumbways">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon">
-            </span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-4" id="navbarNav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/myproject">Add Project</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/testimonial">Testimonial</a>
-                </li>
-            </ul>
-                <a href="/contact" id="buttonContactCont" >
-                    <button type="button" class="btn btn-dark active" aria-current="page" id="buttonContact">Contact Me</button>
+    <!-- Navbar Bootstrap -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary " style="background-color: rgb(244, 243, 243) !important">
+        <div class="container-fluid mx-5">
+            <a class="navbar-brand" href="index.html">
+                <img src="assets/img/logodumbways.png" class="img-fluid max-width:100% me-4" style="height: 32px;"
+                    alt="logo-dumbways">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">
+                </span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-4" id="navbarNav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/myproject">Add Project</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/testimonial">Testimonial</a>
+                    </li>
+                </ul>
+
+                {{#if isLogin}}
+                  <ul class="navbar-nav me-4 mb-2 mb-lg-0 gap-3" id="navbarNavLogin">
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold active text-danger" href="#">Hello, {{user}}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                </ul>
+                {{else}}
+                 <ul class="navbar-nav me-4 mb-2 mb-lg-0 gap-3" id="navbarNavLogin">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                </ul>
+                {{/if}}
+
+                <a href="/contact" id="buttonContactCont">
+                    <button type="button" class="btn btn-dark active" aria-current="page" id="buttonContact">Contact
+                        Me</button>
                 </a>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
 
-<!-- CONTACT BOOTSTRAP -->
-<h2 class="d-flex justify-content-center mt-4">GET IN TOUCH</h2>
-<form id="contactContainer" class="mx-auto mt-4" onsubmit="sendEmail(event);event.preventDefault()">
-    <div>
-      <label for="name" class="form-label">Nama</label>
-      <input type="text" class="form-control" id="name">
-    </div>
-    <div class="mt-3">
-      <label for="email" class="form-label">Email</label>
-      <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-    </div>
-    <div class="mt-3">
-      <label for="tel" class="form-label">Phone Number</label>
-      <input type="tel" class="form-control" id="tel">
-    </div>
-    <div class="mt-3">
-        <label for="option">Subject</label>
+    <!-- CONTACT BOOTSTRAP -->
+    <h2 class="d-flex justify-content-center mt-4">GET IN TOUCH</h2>
+    <form id="contactContainer" class="mx-auto mt-4" onsubmit="sendEmail(event);event.preventDefault()">
         <div>
-            <select id="option" class="form-select w-100">
-              <option disabled selected value></option>
-              <option value="private">Private</option>
-              <option value="public">Public</option>
-            </select>
-          </div>
-    </div>
-    <div class="mt-3">
-        <label class="mb-2" for="textarea">Your Message</label>
-        <div class="form-floating">
-            <textarea class="form-control"  id="textarea" ></textarea>
+            <label for="name" class="form-label">Nama</label>
+            <input type="text" class="form-control" id="name">
         </div>
-    </div>
-    <div class="d-flex justify-content-end mt-3" >
-        <button type="submit" class="btn btn-dark rounded-pill btn-sm">Submit</button>
-    </div>
-  </form>
+        <div class="mt-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+        </div>
+        <div class="mt-3">
+            <label for="tel" class="form-label">Phone Number</label>
+            <input type="tel" class="form-control" id="tel">
+        </div>
+        <div class="mt-3">
+            <label for="option">Subject</label>
+            <div>
+                <select id="option" class="form-select w-100">
+                    <option disabled selected value></option>
+                    <option value="private">Private</option>
+                    <option value="public">Public</option>
+                </select>
+            </div>
+        </div>
+        <div class="mt-3">
+            <label class="mb-2" for="textarea">Your Message</label>
+            <div class="form-floating">
+                <textarea class="form-control" id="textarea"></textarea>
+            </div>
+        </div>
+        <div class="d-flex justify-content-end mt-3">
+            <button type="submit" class="btn btn-dark rounded-pill btn-sm">Submit</button>
+        </div>
+    </form>
 
     <!-- Contact Form
     <h2 class="h2-contact">GET IN TOUCH</h2>
