--- a/nodejs/src/views/myproject.hbs
+++ b/nodejs/src/views/myproject.hbs
@@ -37,6 +37,27 @@
                         <a class="nav-link" href="/testimonial">Testimonial</a>
                     </li>
                 </ul>
+
+                {{#if isLogin}}
+                  <ul class="navbar-nav me-4 mb-2 mb-lg-0 gap-3" id="navbarNavLogin">
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold active text-danger" href="#">Hello, {{user}}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                </ul>
+                {{else}}
+                 <ul class="navbar-nav me-4 mb-2 mb-lg-0 gap-3" id="navbarNavLogin">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                </ul>
+                {{/if}}
+
                 <a href="/contact" id="buttonContactCont">
                     <button type="button" class="btn btn-dark" id="buttonContact">Contact Me</button>
                 </a>
@@ -46,6 +67,7 @@
 
     <!-- FORM BOOTSTRAP -->
     <h2 class="mt-4 d-flex justify-content-center">ADD MY PROJECT</h2>
+    {{#if isLogin}}
     <div class="container mt-5">
         <form class="row g-3" action="/myproject" method="POST">
             <div class="col-12">
@@ -113,6 +135,7 @@
                     </div>
                 </div>
             </div>
+    
             <div class="col-12 d-flex justify-content-end mb-4">
                 <button type="submit" class="btn btn-dark rounded-pill btn-sm" id="submit">Submit</button>
             </div>
@@ -124,12 +147,13 @@
 
 
     <!-- Card -->
+    
     <div class="title">
         <h1>MY PROJECT</h1>
     </div>
     <div class="container-master" id="container">
         {{!-- Content moved to javascript --}}
-        {{#each data}}
+        {{#each projectData}}
         <div class="container-card">
             <div class="container-card-2">
                 <div onclick="window.location.href='/detail/{{@index}}';">
@@ -173,6 +197,7 @@
         {{!-- --}}
     </div>
 
+    {{/if}}
     <script src="assets/js/myproject.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
