Edit CRUD function for dynamic page with .id

--- a/nodejs/src/views/detail.hbs
+++ b/nodejs/src/views/detail.hbs
@@ -69,7 +69,7 @@
 
     <div class="container-detail">
         <div class="title">
-            <h1>Dumbways - {{data.authorName}}</h1>
+            <h1>Dumbways - {{data.name}}</h1>
         </div>
         <div class="container-content">
             <div class="image">
