--- a/nodejs/src/views/myproject.hbs
+++ b/nodejs/src/views/myproject.hbs
@@ -67,7 +67,7 @@
 
     <!-- FORM BOOTSTRAP -->
     <h2 class="mt-4 d-flex justify-content-center">ADD MY PROJECT</h2>
-    {{#if isLogin}}
+ 
     <div class="container mt-5">
         <form class="row g-3" action="/myproject" method="POST">
             <div class="col-12">
@@ -156,27 +156,27 @@
         {{#each projectData}}
         <div class="container-card">
             <div class="container-card-2">
-                <div onclick="window.location.href='/detail/{{@index}}';">
+                <div onclick="window.location.href='/detail/{{author.id}}';">
                     <div class="container-content">
                         <img src="assets/img/image2.jpg" alt="smartphone" class="image-1">
-                        <h4>{{name}}</h4>
-                        <span id="totalMonth">{{totalMonth}}</span>
-                        <a href="/detail/{{@index}}" class="text-reset text-decoration-none">
-                            <p>{{description}}</p>
+                        <h4>{{author.name}}</h4>
+                        <span id="totalMonth">{{this.totalMonth}}</span>
+                        <a href="/detail/{{author.id}}" class="text-reset text-decoration-none">
+                            <p>{{project.description}}</p>
                         </a>
                     </div>
 
                     <div class="container-logo">
-                        {{#if program.first}}
+                        {{#if project.technologies.first}}
                         <img src='assets/icon/nodejs.png' alt="logo-nodejs" class="logo-nodejs" id="logo-nodejs">
                         {{/if}}
-                        {{#if program.second}}
+                        {{#if project.technologies.second}}
                         <img src='assets/icon/reactjs.png' alt="logo-reactjs" class="logo-reactjs" id="logo-reactjs">
                         {{/if}}
-                        {{#if program.third}}
+                        {{#if project.technologies.third}}
                         <img src='assets/icon/nextjs.png' alt="logo-nextjs" class="logo-nextjs" id="logo-nextjs">
                         {{/if}}
-                        {{#if program.fourth}}
+                        {{#if project.technologies.fourth}}
                         <img src='assets/icon/typescript.png' alt="logo-typescript" class="logo-typescript"
                             id="logo-typescript">
                         {{/if}}
@@ -184,10 +184,10 @@
                 </div>
                 <div class="container-button">
                     <button class="edit-button">
-                        <a href="/updatemyproject/{{@index}}" class="editx">edit</a>
+                        <a href="/updatemyproject/{{author.id}}" class="editx">edit</a>
                     </button>
                     <button class="delete-button">
-                        <a href="/delete/{{@index}}" onclick="return confirm('Delete this post?')"
+                        <a href="/delete/{{author.id}}" onclick="return confirm('Delete this post?')"
                             class="text-decoration-none text-reset">delete</a></button>
                 </div>
             </div>
@@ -197,7 +197,6 @@
         {{!-- --}}
     </div>
 
-    {{/if}}
     <script src="assets/js/myproject.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
