--- a/nodejs/src/views/updatemyproject.hbs
+++ b/nodejs/src/views/updatemyproject.hbs
@@ -68,10 +68,10 @@
     <!-- FORM BOOTSTRAP -->
     <h2 class="mt-4 d-flex justify-content-center">Update MY PROJECT</h2>
     <div class="container mt-5">
-        <form class="row g-3" action="/updatemyproject/{{id}}" method="POST">
+        <form class="row g-3" action="/updatemyproject/{{this.id}}" method="POST">
             <div class="col-12">
                 <label for="projectName" class="form-label fw-bold">Project Name</label>
-                <input type="text" class="form-control" id="projectName" name="name" value="{{data.authorName}}">
+                <input type="text" class="form-control" id="projectName" name="name" value="{{data.name}}">
             </div>
             <div class="col-md-6">
                 <label for="startDate" class="form-label fw-bold">Start Date</label>
@@ -93,15 +93,15 @@
                 <div class="col-12 d-flex">
                     <div class="col-6">
                         <div class="form-check mb-2">
-                            <input class="form-check-input" type="checkbox" id="nodejs" name="nodejs" {{#if
-                                data.technologies.first}}checked{{/if}}>
+                            <input class="form-check-input" type="checkbox" id="nodejs" name="nodejs" 
+                            {{#if data.technologies.first}}checked{{/if}}>
                             <label class="form-check-label" for="nodejs">
                                 Node JS
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="reactjs" name="reactjs" {{#if
-                                data.technologies.second}}checked{{/if}}>
+                            <input class="form-check-input" type="checkbox" id="reactjs" name="reactjs" 
+                            {{#if data.technologies.second}}checked{{/if}}>
                             <label class="form-check-label" for="reactjs">
                                 React JS
                             </label>
@@ -110,15 +110,15 @@
 
                     <div>
                         <div class="form-check mb-2">
-                            <input class="form-check-input" type="checkbox" id="nextjs" name="nextjs" {{#if
-                                data.technologies.third}}checked{{/if}}>
+                            <input class="form-check-input" type="checkbox" id="nextjs" name="nextjs" 
+                            {{#if data.technologies.third}}checked{{/if}}>
                             <label class="form-check-label" for="nextjs">
                                 Next JS
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="typescript" name="typescript" {{#if
-                                data.technologies.fourth}}checked{{/if}}>
+                            <input class="form-check-input" type="checkbox" id="typescript" name="typescript" 
+                            {{#if data.technologies.fourth}}checked{{/if}}>
                             <label class="form-check-label" for="typescript">
                                 TypeScript
                             </label>
