Table Relation, Upload file with multer, users login

--- a/nodejs/src/views/detail.hbs
+++ b/nodejs/src/views/detail.hbs
@@ -73,7 +73,7 @@
         </div>
         <div class="container-content">
             <div class="image">
-                <img src="/assets/img/image2.jpg" alt="">
+                <img src="/upload/{{data.uploadImage}}" alt="">
             </div>
             <div class="container-time">
                 <div class="duration">
@@ -112,7 +112,8 @@
             </div>
         </div>
         <div class="content">
-            <p class="content-1">
+            <p class="content-1 d-flex justify-content-center fw-bold h4 mb-4">{{data.description}}</p>
+            <p class="content-2">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
@@ -128,7 +129,7 @@
                 theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor
                 sit amet..", comes from a line in section 1.10.32.
             </p>
-            <p class="content-2">
+            <p class="content-3">
 
                 The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
                 Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their
@@ -140,7 +141,7 @@
                 search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have
                 evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
             </p>
-            <p class="content-3">
+            <p class="content-4">
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                 alteration in some form, by injected humour, or randomised words which don't look even slightly
                 believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
