--- a/nodejs/src/views/myproject.hbs
+++ b/nodejs/src/views/myproject.hbs
@@ -69,7 +69,7 @@
     <h2 class="mt-4 d-flex justify-content-center">ADD MY PROJECT</h2>
  
     <div class="container mt-5">
-        <form class="row g-3" action="/myproject" method="POST">
+        <form class="row g-3" action="/myproject" method="POST" enctype="multipart/form-data">
             <div class="col-12">
                 <label for="projectName" class="form-label fw-bold">Project Name</label>
                 <input type="text" class="form-control" id="projectName" name="name">
@@ -126,7 +126,7 @@
             <div class="mb-1">
                 <label for="formFile" class="form-label fw-bold">Upload Image</label>
                 <div>
-                    <input class="form-control d-none" accept="image/*" type="file" id="image">
+                    <input class="form-control d-none" accept="image/*" type="file" id="image" name="image">
                     <div class="d-flex">
                         <label class="btn btn-light" for="image">choose</label>
                         <label class="form-control" for="image">
@@ -158,7 +158,7 @@
             <div class="container-card-2">
                 <div onclick="window.location.href='/detail/{{this.authorId}}';">
                     <div class="container-content">
-                        <img src="assets/img/image2.jpg" alt="smartphone" class="image-1">
+                        <img src="/upload/{{this.uploadImage}}" alt="smartphone" class="image-1">
                         <h4>{{this.author_name}}</h4>
                         <span id="totalMonth">{{this.totalMonth}}</span>
                         <a href="/detail/{{this.authorId}}" class="text-reset text-decoration-none">
