--- a/nodejs/src/views/updatemyproject.hbs
+++ b/nodejs/src/views/updatemyproject.hbs
@@ -68,7 +68,7 @@
     <!-- FORM BOOTSTRAP -->
     <h2 class="mt-4 d-flex justify-content-center">Update MY PROJECT</h2>
     <div class="container mt-5">
-        <form class="row g-3" action="/updatemyproject/{{this.id}}" method="POST">
+        <form class="row g-3" action="/updatemyproject/{{this.id}}" method="POST" enctype="multipart/form-data">
             <div class="col-12">
                 <label for="projectName" class="form-label fw-bold">Project Name</label>
                 <input type="text" class="form-control" id="projectName" name="name" value="{{data.name}}">
@@ -128,9 +128,10 @@
             </div>
 
             <div class="mb-1">
+                
                 <label for="formFile" class="form-label fw-bold">Upload Image</label>
                 <div>
-                    <input class="form-control d-none" accept="image/*" type="file" id="image">
+                    <input class="form-control d-none" accept="image/*" type="file" id="image" name="image">
                     <div class="d-flex">
                         <label class="btn btn-light" for="image">choose</label>
                         <label class="form-control" for="image">
