Edited handlepost image when empty

--- a/nodejs/src/views/index.hbs
+++ b/nodejs/src/views/index.hbs
@@ -86,7 +86,7 @@
                     Vero voluptatem saepe quaerat rerum molestiae sed magnam labore tenetur maiores dignissimos! Sequi
                     atque blanditiis saepe est optio molestias non!</p>
                 <div class="head-1-contact">
-                    <a class="head-1-sub1" href="contact.html">
+                    <a class="head-1-sub1" href="http://wa.me/628123456789" target="_blank">
                         contact
                     </a>
                     <a href="#" class="head-1-sub2">
@@ -94,10 +94,18 @@
                     </a>
                 </div>
                 <div class="head-2">
+                    <a class="text-decoration-none text-dark" href="https://www.linkedin.com/" target="_blank">
                     <i class="fa-brands fa-linkedin fa-2x"></i>
+                    </a>
+                    <a class="text-decoration-none text-dark" href="https://www.instgram.com/" target="_blank">
                     <i class="fa-brands fa-square-instagram fa-2x"></i>
+                    </a>
+                    <a class="text-decoration-none text-dark" href="https://www.facebook.com/" target="_blank">
                     <i class="fa-brands fa-square-facebook fa-2x"></i>
+                    </a>
+                    <a class="text-decoration-none text-dark" href="https://www.twitter.com/" target="_blank">
                     <i class="fa-brands fa-square-x-twitter fa-2x"></i>
+                    </a>
                 </div>
             </div>
 
