--- a/nodejs/src/views/updatemyproject.hbs
+++ b/nodejs/src/views/updatemyproject.hbs
@@ -71,7 +71,7 @@
         <form class="row g-3" action="/updatemyproject/{{this.id}}" method="POST" enctype="multipart/form-data">
             <div class="col-12">
                 <label for="projectName" class="form-label fw-bold">Project Name</label>
-                <input type="text" class="form-control" id="projectName" name="name" value="{{data.name}}">
+                <input type="text" class="form-control" id="projectName" name="name" value="{{data.name}}" required>
             </div>
             <div class="col-md-6">
                 <label for="startDate" class="form-label fw-bold">Start Date</label>
